add current user
